# quant-research-agent

./: .gitignore  README.md  pyproject.toml  run_agent.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_work_item.md
config/: operator_seed.json  sources.json
docs/: github_backlog_seed.md  github_bootstrap.md  windows_task_scheduler.md
docs/work_items/: alpha-research-note-style.md
scripts/: register_daily_task.ps1
src/quant_research_agent/: __init__.py  __main__.py  cli.py  models.py  paths.py
src/quant_research_agent/alpha_generation/: __init__.py  critic.py  service.py
src/quant_research_agent/collectors/: rss.py
src/quant_research_agent/gui/: app.py
src/quant_research_agent/ranking/: service.py
src/quant_research_agent/reporting/: service.py
src/quant_research_agent/summarizer/: service.py
src/quant_research_agent/validation/: worldquant.py
src/quant_research_agent/web/: __init__.py
src/quant_research_agent/web/static/: dashboard.css
src/quant_research_agent/web/templates/: dashboard.html
